--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-google-analytics": "^2.1.23",
     "gatsby-plugin-manifest": "^2.2.27",
     "gatsby-plugin-sitemap": "^2.2.21",
+    "gatsby-source-velog": "^1.0.0",
     "gatsby-theme-chronoblog": "^0.22.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
